--- a/style.scss
+++ b/style.scss
@@ -219,6 +219,10 @@ header,
 	width: 100%;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
+
+	&:hover {
+		background-color: lighten($color-primary, 30%);
+	}
 }
 
 .choix,
@@ -584,6 +588,8 @@ hr {
 	background-color: $color-btn;
 	overflow-y: hidden;
 	padding-right: 2rem;
+	text-overflow: ellipsis;
+
 
 	& h3 {
 		font-size: 1.5rem !important;
@@ -641,11 +647,13 @@ hr {
 	margin-bottom: 1.5rem;
 	padding-left: 1rem;
 	z-index: 1;
+	text-overflow: ellipsis;
 
-	&:active {
+	&:hover {
 		padding-right: 0;
 		padding-top: 0;
 		padding-bottom: 0;
+		text-overflow: ellipsis;
 
 		&>.green {
 			outline: none;
@@ -653,10 +661,6 @@ hr {
 		}
 	}
 
-	&:hover {
-		box-shadow: rgba(0, 0, 0, 0.35) 0px 10px 10px;
-
-	}
 
 }
 
