mise en place des media queries avec mixins et variables dediees

--- a/Utils/variables.scss
+++ b/Utils/variables.scss
@@ -11,3 +11,9 @@ $color-location: darken($initial-color, 8.5%);
 $color-nouveau-icone: darken($color-tertiary, 50%);
 $font-average: 1.4rem;
 $font-small: 0.9rem;
+
+$xs: "480px";
+$sm: "600px";
+$md: "799px";
+$lg: "1010px";
+$xl: "1280px";
