--- a/Utils/mixins.scss
+++ b/Utils/mixins.scss
@@ -10,6 +10,7 @@
 	height: 1.5rem;
 
 }
+
 @mixin icon_resize_heart {
 	width: 3rem;
 	height: 3rem;
@@ -48,4 +49,17 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+
+@mixin media-min($size) {
+	@media only screen and (min-width: $size) {
+		@content;
+	}
+}
+
+@mixin media-max($size) {
+	@media only screen and (max-width: $size) {
+		@content;
+	}
 }
