composition media queries desktop

--- a/Utils/media_queries.css
+++ b/Utils/media_queries.css
@@ -1,6 +1,1 @@
-@media only screen and (min-width: 300px) {
-  body {
-    color: red;
-  }
-}
-/*# sourceMappingURL=media_queries.css.map */
+/* No CSS *//*# sourceMappingURL=media_queries.css.map */
