--- a/Utils/mixins.scss
+++ b/Utils/mixins.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 @mixin struct_row {
 	display: flex;
 	flex-direction: row;
@@ -60,6 +62,11 @@
 
 @mixin media-max($size) {
 	@media only screen and (max-width: $size) {
-		@content;
+		.entrees {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
 	}
 }
