--- a/style.css
+++ b/style.css
@@ -770,7 +770,6 @@ hr {
       -ms-flex-align: center;
           align-items: center;
   width: 0px;
-  content: "";
 }
 
 .green:hover {
@@ -869,7 +868,7 @@ hr {
 
 .titre_element h2 {
   margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
   font-size: 1.6rem;
   font-weight: 600;
   overflow: hidden;
