--- a/style.scss
+++ b/style.scss
@@ -623,7 +623,7 @@ hr {
 	@include div-center;
 	// z-index: 0;
 	width: 0px;
-	content: "";
+	// content: "";
 
 	&:hover {
 		color: red;
@@ -755,7 +755,7 @@ hr {
 
 	& h2 {
 		margin-top: 0.5rem;
-		margin-bottom: 0.5rem;
+		margin-bottom: 0;
 		font-size: 1.6rem;
 		font-weight: 600;
 		overflow: hidden;
