--- a/style.scss
+++ b/style.scss
@@ -363,8 +363,11 @@ header,
 	}
 }
 
-#main_titre_menu {
+.main_titre_menu {
 	margin-top: 0 !important;
+	margin-left: 1rem !important;
+	margin-right: 1rem !important;
+	
 }
 
 .palette,
