debut reconstruction menu

--- a/style.css
+++ b/style.css
@@ -718,6 +718,12 @@ hr {
   margin-left: auto;
 }
 
+.categories_food {
+  width: auto;
+  padding: 1rem;
+  margin: 1rem;
+}
+
 .entrees,
 .plats,
 .desserts {
