--- a/style.scss
+++ b/style.scss
@@ -589,6 +589,24 @@ hr {
 	margin-left: auto;
 }
 
+
+// #entrees {
+// 	margin-left: 1rem !important;
+// 	margin-right: 1rem !important;
+// }
+
+.categories_food {
+	width: auto;
+	padding: 1rem;
+	margin: 1rem;
+}
+
+// #desserts {
+// 	margin-left: 1rem !important;
+// 	margin-right: 1rem !important;
+// }
+
+
 .entrees,
 .plats,
 .desserts {
@@ -794,6 +812,11 @@ hr {
 
 
 // Menu 1, 2, 3, 4 FIN
+
+
+// MENU NOUVEAU DEBUT
+
+// MENU NOUVEAU FIN
 
 
 // media queries
