--- a/Utils/mixins.scss
+++ b/Utils/mixins.scss
@@ -1,5 +1,10 @@
 @import "variables.scss";
 
+@mixin reset_pad_marg {
+	padding: 0;
+	margin: 0;
+}
+
 @mixin struct_row {
 	display: flex;
 	flex-direction: row;
