--- a/Utils/variables.scss
+++ b/Utils/variables.scss
@@ -11,7 +11,7 @@ $color-location: darken($initial-color, 8.5%);
 $color-nouveau-icone: darken($color-tertiary, 50%);
 $font-average: 1.4rem;
 $font-small: 0.9rem;
-
+$font-title: 2rem;
 $xs: "480px";
 $sm: "600px";
 $md: "799px";
