--- a/style.css
+++ b/style.css
@@ -981,7 +981,7 @@ hr {
   padding: 0;
   margin: 0;
   font-family: Shrikhand;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 .titre_e_p_d {
@@ -989,6 +989,17 @@ hr {
   margin: 0;
   -ms-flex-item-align: start;
       align-self: flex-start;
+  font-size: 1.6rem;
+  font-weight: 100;
+}
+
+.button_commander {
+  border-radius: 30px;
+}
+
+.rose_menu {
+  width: 50vw !important;
+  border-radius: 30px !important;
 }
 
 @media only screen and (min-width: 1024px) {
