--- a/style.css
+++ b/style.css
@@ -958,6 +958,8 @@ hr {
   border-radius: 30px 30px 0 0;
   height: 300px;
   width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -991,6 +993,28 @@ hr {
       align-self: flex-start;
   font-size: 1.6rem;
   font-weight: 100;
+  margin-bottom: .5rem;
+}
+
+.titre_ligne_verte {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .button_commander {
@@ -1000,6 +1024,13 @@ hr {
 .rose_menu {
   width: 50vw !important;
   border-radius: 30px !important;
+}
+
+.ligne_verte {
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  position: relative;
 }
 
 @media only screen and (min-width: 1024px) {
