--- a/style.scss
+++ b/style.scss
@@ -849,6 +849,8 @@ hr {
 	border-radius: 30px 30px 0 0;
 	height: 300px;
 	width: 100%;
+	padding-left: 1rem;
+	padding-right: 1rem;
 	position: relative;
 	@include struct-col-space;
 	justify-content: space-between;
@@ -865,17 +867,31 @@ hr {
 	align-self: flex-start;
 	font-size: 1.6rem;
 	font-weight: 100;
+	// border: 1px solid red;
+	margin-bottom: .5rem;
+
 }
 
+.titre_ligne_verte {
+	@include struct-col-space;
+	// border: 1px solid green;
+	align-self: flex-start;
+	justify-content: space-between;
+}
 
 .button_commander {
-
 	border-radius: 30px;
 }
 
 .rose_menu {
 	width: 50vw !important;
 	border-radius: 30px !important;
+}
+
+.ligne_verte {
+	align-self: start;
+	// border: 1px solid red;
+	position: relative;
 }
 
 // MENU NOUVEAU FIN
