--- a/style.css
+++ b/style.css
@@ -957,7 +957,7 @@ hr {
   background-color: #e9e9e9;
   border-radius: 30px 30px 0 0;
   height: 300px;
-  width: 100%;
+  width: auto;
   padding-left: 1rem;
   padding-right: 1rem;
   position: relative;
@@ -977,6 +977,30 @@ hr {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.conteneur_titre_coeur {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  width: 100%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-top: 2rem;
 }
 
 .titre_principal_menu {
