--- a/style.scss
+++ b/style.scss
@@ -848,12 +848,20 @@ hr {
 	// border: 1px solid red;
 	border-radius: 30px 30px 0 0;
 	height: 300px;
-	width: 100%;
+	width: auto;
 	padding-left: 1rem;
 	padding-right: 1rem;
 	position: relative;
 	@include struct-col-space;
 	justify-content: space-between;
+}
+
+.conteneur_titre_coeur {
+	@include reset_pad_marg;
+	@include struct_row_center;
+	justify-content: space-evenly;
+	margin-top: 2rem;
+
 }
 
 .titre_principal_menu {
