renommer classe bouton

--- a/style.scss
+++ b/style.scss
@@ -891,7 +891,7 @@ hr {
 	border-radius: 30px;
 }
 
-.rose_menu {
+.bouton_rose_menu {
 	width: 50vw !important;
 	border-radius: 30px !important;
 }
