--- a/style.scss
+++ b/style.scss
@@ -880,7 +880,7 @@ hr {
 
 }
 
-.titre_ligne_verte {
+.conteneur_titre_ligne_verte {
 	@include struct-col-space;
 	// border: 1px solid green;
 	align-self: flex-start;
