--- a/style.css
+++ b/style.css
@@ -1059,12 +1059,43 @@ hr {
 
 /* INTERIEUR DU MENU DEBUT */
 .conteneur_E_P_D {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: 1px solid red;
   width: 100%;
   padding: 0 1rem 0 1rem;
 }
 
 .conteneur_E_P_D_niveau_1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   border: 1px solid green;
   width: 100%;
   border-radius: 1.5rem;
@@ -1087,46 +1118,14 @@ hr {
 .conteneur_prix {
   padding: 0;
   margin: 0;
-  padding: 1rem 1rem 1rem 1rem;
+  padding: 1rem 2rem 0.5rem 1rem;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
 .conteneur_prix h2 {
   padding: 0;
   margin: 0;
-}
-
-.conteneur_E_P_D {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.conteneur_E_P_D_niveau_1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  width: 100%;
 }
 
 /* INTERIEUR DU MENU DEBUT */
