--- a/style.css
+++ b/style.css
@@ -937,6 +937,19 @@ hr {
 .contenu {
   width: 100%;
   z-index: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .contenu img {
@@ -956,7 +969,6 @@ hr {
   z-index: 1;
   background-color: #e9e9e9;
   border-radius: 30px 30px 0 0;
-  height: 300px;
   width: auto;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1000,7 +1012,7 @@ hr {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 
 .titre_principal_menu {
