--- a/style.scss
+++ b/style.scss
@@ -828,6 +828,7 @@ hr {
 	// border: 1px solid red;
 	width: 100%;
 	z-index: 0;
+	@include struct-col-space;
 
 	& img {
 		padding: 0;
@@ -847,7 +848,7 @@ hr {
 	background-color: $color-location;
 	// border: 1px solid red;
 	border-radius: 30px 30px 0 0;
-	height: 300px;
+	// height: 300px;
 	width: auto;
 	padding-left: 1rem;
 	padding-right: 1rem;
@@ -857,10 +858,11 @@ hr {
 }
 
 .conteneur_titre_coeur {
+	
 	@include reset_pad_marg;
 	@include struct_row_center;
 	justify-content: space-evenly;
-	margin-top: 2rem;
+	margin-top: 3rem;
 	// height: 6rem;
 
 }
@@ -921,6 +923,7 @@ hr {
 	border-radius: 1.5rem;
 	background-color: $initial-color;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	// margin: 1rem 1rem 1rem 1rem;
 
 
 }
