--- a/Utils/variables.scss
+++ b/Utils/variables.scss
@@ -5,6 +5,7 @@ $color-tertiary: #99E2D0;
 
 $border-size: 2px;
 
+$color-heart: linear-gradient($color-primary, $color-secondary);
 $color-btn: darken($initial-color, 3.5%);
 $color-footer: darken($initial-color, 79.25%);
 $color-location: darken($initial-color, 8.5%);
