--- a/style.css
+++ b/style.css
@@ -1012,6 +1012,62 @@ hr {
   margin-top: 3rem;
 }
 
+.premier_coeur {
+  opacity: 1;
+  z-index: 1;
+}
+
+.deuxieme_coeur {
+  display: none;
+  z-index: 0;
+}
+
+.conteneur_coeur {
+  -webkit-animation: all 10ms ease-in-out;
+          animation: all 10ms ease-in-out;
+}
+
+.conteneur_coeur:hover > .premier_coeur {
+  display: none;
+}
+
+.conteneur_coeur:hover > .deuxieme_coeur {
+  display: block;
+  color: transparent;
+  -webkit-animation: heart_fill 2s ease-in-out forwards;
+          animation: heart_fill 2s ease-in-out forwards;
+}
+
+@-webkit-keyframes heart_fill {
+  0% {
+    background: -webkit-linear-gradient(#9d70d4, #f598da);
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  100% {
+    background: -webkit-linear-gradient(#9356DC, #FF79DA);
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+@keyframes heart_fill {
+  0% {
+    background: -webkit-linear-gradient(#9d70d4, #f598da);
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  100% {
+    background: -webkit-linear-gradient(#9356DC, #FF79DA);
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
 .titre_principal_menu {
   padding: 0;
   margin: 0;
