--- a/style.scss
+++ b/style.scss
@@ -831,6 +831,7 @@ hr {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+
 	// align-self: center;
 	& img {
 		padding: 0;
@@ -860,7 +861,7 @@ hr {
 }
 
 .conteneur_titre_coeur {
-	
+
 	@include reset_pad_marg;
 	@include struct_row_center;
 	justify-content: space-evenly;
@@ -868,6 +869,80 @@ hr {
 	// height: 6rem;
 
 }
+
+// .fa-heart {
+// 	// color: blue;
+// 	content: "";
+
+// 	// background-color: aqua;
+// 	// background-clip: padding-box;
+// 	&:hover {
+// 		// animation: heart_fill 1000ms ease-in-out both;
+// 		// background-clip: padding-box;
+// 	}
+// }
+
+.premier_coeur {
+	opacity: 1;
+	z-index: 1;
+}
+
+.deuxieme_coeur {
+	display: none;
+	z-index: 0;
+}
+
+.conteneur_coeur {
+	animation: all 10ms ease-in-out;
+	&:hover {
+		&>.premier_coeur {
+			display: none;
+		}
+
+		&>.deuxieme_coeur {
+			// opacity: 1;
+			display: block;
+			color: transparent;
+			animation:  heart_fill 2s ease-in-out forwards;
+
+		}
+	}
+}
+
+@keyframes heart_fill {
+	0% {
+		// color: transparent;
+		// stroke: black;
+		// color: transparent;
+		// border: 1px solid black;
+		// background: white;
+		background: -webkit-linear-gradient(#9d70d4, #f598da);
+		background-clip: border-box;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		// stroke: black;
+	}
+
+
+	100% {
+		// color: red;
+		// background-color: violet;
+		// color: red;
+		background: -webkit-linear-gradient($color-primary, $color-secondary);
+		background-clip: border-box;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		// color: linear-gradient(#9356DC, #FF79DA);
+		// stroke: red;
+		// fill: red;
+		// -webkit-text-stroke-width: 1px;
+		// -webkit-text-stroke-color: green;
+		// background-clip: padding-box;
+		// stroke: transparent;
+	}
+
+}
+
 
 .titre_principal_menu {
 	@include reset_pad_marg;
@@ -917,7 +992,7 @@ hr {
 	// padding: 0 1rem 0 1rem;
 	// margin: 0 1rem 0 1rem;
 	margin: 1rem;
-	
+
 }
 
 .conteneur_E_P_D_niveau_1 {
@@ -953,7 +1028,7 @@ hr {
 	align-self: flex-end;
 
 	& h2 {
-	@include reset_pad_marg;
+		@include reset_pad_marg;
 
 	}
 }
