--- a/style.css
+++ b/style.css
@@ -1139,6 +1139,7 @@ hr {
           align-items: center;
   width: 100%;
   margin: 1rem;
+  overflow-x: visible;
 }
 
 .conteneur_E_P_D_niveau_1 {
@@ -1157,6 +1158,7 @@ hr {
           align-items: center;
   text-align: center;
   width: 100%;
+  text-align: left;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
