--- a/style.scss
+++ b/style.scss
@@ -820,6 +820,10 @@ hr {
 	display: none !important;
 }
 
+// .contenu {
+// 	display: none;
+// }
+
 .contenu>* {
 	@include reset_pad_marg;
 }
@@ -992,11 +996,13 @@ hr {
 	// padding: 0 1rem 0 1rem;
 	// margin: 0 1rem 0 1rem;
 	margin: 1rem;
+	overflow-x: visible;
 
 }
 
 .conteneur_E_P_D_niveau_1 {
 	@include struct_row_center;
+	text-align: left;
 	justify-content: space-between;
 	// border: 1px solid green;
 	width: 100%;
