--- a/style.scss
+++ b/style.scss
@@ -1060,14 +1060,14 @@ hr {
 .conteneur_E_P_D_niveau_1 {
 	border-radius: 15px;
 	width: 100%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	border: none;
+	// display: flex;
+	// flex-direction: row;
+	// justify-content: space-between;
+	// align-items: center;
+	// border: none;
 	background-color: $initial-color;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
-	margin-bottom: 1.5rem;
+	// margin-bottom: 1.5rem;
 	padding-left: 1rem;
 	z-index: 1;
 	text-overflow: ellipsis;
