--- a/style.scss
+++ b/style.scss
@@ -907,7 +907,7 @@ hr {
 			// opacity: 1;
 			display: block;
 			color: transparent;
-			animation:  heart_fill 2s ease-in-out forwards;
+			animation:  heart_fill 800ms ease-in-out forwards;
 
 		}
 	}
