--- a/style.css
+++ b/style.css
@@ -959,13 +959,13 @@ hr {
      object-fit: cover;
   -o-object-position: 50% 50%;
      object-position: 50% 50%;
-  top: 4.5rem;
 }
 
 .menu_fond_gris {
   z-index: 1;
   background-color: #e9e9e9;
   border-radius: 30px 30px 0 0;
+  height: 100%;
   width: auto;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1187,6 +1187,7 @@ hr {
 }
 
 .description {
+  text-overflow: ellipsis;
   font-size: 1.5rem;
   font-weight: 100;
 }
