--- a/style.scss
+++ b/style.scss
@@ -845,7 +845,7 @@ hr {
 		position: relative;
 		object-fit: cover;
 		object-position: 50% 50%;
-		top: 4.5rem;
+		// top: 4.5rem;
 
 	}
 }
@@ -855,13 +855,14 @@ hr {
 	background-color: $color-location;
 	// border: 1px solid red;
 	border-radius: 30px 30px 0 0;
-	// height: 300px;
+	height: 100%;
 	width: auto;
 	padding-left: 1rem;
 	padding-right: 1rem;
 	position: relative;
 	@include struct-col-space;
 	justify-content: space-between;
+	// bottom: 4.5rem;
 }
 
 .conteneur_titre_coeur {
@@ -1037,6 +1038,7 @@ hr {
 }
 
 .description {
+	text-overflow: ellipsis;
 	font-size: 1.5rem;
 	font-weight: 100;
 }
